<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TeachLang</string>
    <string name="V">глагол</string>
    <string name="ger">деепричастие</string>
    <string name="inf">инфинитив</string>
    <string name="partcp">причастие</string>
    <string name="praett">прошедшего времени</string>
    <string name="praess">настоящего времени</string>
    <string name="indic">изъявительное наклонение</string>
    <string name="imper">повелительное наклонение</string>
    <string name="cond">условное наклонение</string>
    <string name="praet">прошедшее время</string>
    <string name="praes">настоящее время</string>
    <string name="fut">будущее время</string>
    <string name="sg">ед. ч.</string>
    <string name="pl">мн. ч.</string>
    <string name="p1">1 лицо</string>
    <string name="p2">2 лицо</string>
    <string name="p3">3 лицо</string>
    <string name="m">м.р.</string>
    <string name="f">ж. р.</string>
    <string name="n">ср. р.</string>
    <string name="mn">общая форма мужского и среднего рода</string>
    <string name="mf">общая форма мужского и женского рода</string>
    <string name="fn">общая форма женскогои среднего рода</string>
    <string name="pro">местоимение</string>
    <string name="pos">притяжательное</string>
    <string name="ipf">несовершенный вид</string>
    <string name="pf">совершенный вид</string>
    <string name="actt">действительное</string>
    <string name="passs">страдательное</string>
    <string name="act">действительный залог</string>
    <string name="pass">страдательный залог</string>
    <string name="tran">переходный</string>
    <string name="intr">непереходный</string>
    <string name="conjugI">I спряжение</string>
    <string name="conjugII">II спряжение</string>
    <string name="brev">краткое</string>
    <string name="plen">полное</string>
    <string name="refl">возвр.</string>
    <string name="nonrRfl">невозвр.</string>
    <string name="nom">И.п.</string>
    <string name="gen">Р.п.</string>
    <string name="dat">Д.п.</string>
    <string name="acc">В.п.</string>
    <string name="ins">Т.п.</string>
    <string name="abl">П.п.</string>
    <string name="sloganInMenu">Играй и учись</string>
    <string name="answer">Ответ</string>
    <string name="enter_name">Введите глагол или глагольныую форму</string>
    <string name="enter_btn">Анализировать</string>
    <string name="versionAndAuthor">©A.Katsnelson, 2018 Версия: 1.0</string>
    <string name="navigation_drawer_open">" "</string>
    <string name="navigation_drawer_close">" "</string>
    <string name="action_settings">" "</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_about_program">О программе</string>
    <string name="nav_main" >Главная</string>
    <string name="pattern_low">Уровень лёгкий</string>
    <string name="pattern_medium">Уровень средний</string>
    <string name="pattern_high">Уровень трудный</string>
    <string name="pattern_hard">Уровень сверхтрудный</string>
    <string name="pattern_v">Тема глагол</string>
    <string name="pattern_inf">Тема инфинитив</string>
    <string name="pattern_partcp">Тема причастие</string>
    <string name="pattern_ger">Тема деепричастие</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_program" >"Программа TeachLang была создана AKatsnelson при поддержке Господа Бога для помощи преподователям и учащимся/студентам в сфере морфологического анализа. В дальнейшем ждём новых функций и режимов! "</string>
    <string name="parsing">разбор</string>
    <string name="nav_parse">Анализатор</string>
    <string name="nav_buildWordGame">Построй слово</string>
    <string name="letsPlay">Давай играть</string>
    <string name="enterTheForm">Введите форму</string>
    <string name="balls">Баллы:</string>
    <string name="game_over">Игра окончена</string>
    <string name="wrong">Неправильно. Правильный ответ:</string>
    <string name="wrongTitle">Вы ошиблись</string>
    <string name="i_realized">Я осознал</string>
    <string name="yourAnswer">Ваш ответ:</string>
    <string name="yourWordIs">P.S. Вы вводили слово:</string>
    <string name="patterns">Уровни сложности и темы</string>
    <string name="lang">Язык</string>
    <string name="patter_null">Без уровня сложности</string>
    <string name="patter_low">Лёгкий</string>
    <string name="nav_achievement">Достижения</string>
    <string name="for_what">Для чеего нужна и как использовать программу</string>
    <string name="primerOne">Пример использования 1: Преподаватель может сомневаться в уровне знаний ученика и дать ему задание набрать 50 баллов.</string>
    <string name="nonRefl">невозвр.</string>
    <string name="noPref">Если нет приставки</string>
    <string name="pattern_null">Без уровня сложности</string>
    <string name="primerTwo">Пример использования 2: Вы можете проверить себя и соревноваться с друзьями кто больше наберёт баллов.</string>
</resources>