<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_main" />
        <item
            android:id="@+id/nav_buildWordGame"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/nav_buildWordGame" />
        <item
            android:id="@+id/nav_parse"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/nav_parse" />
        <item
            android:id="@+id/nav_achievement"
            android:icon="@drawable/ic_assignment_turned_in_black_24dp"
            android:title="@string/nav_achievement" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about_program"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about_program" />
    </group>

</menu>
