<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="by.akatsnelson.teachlang.fragment.BuildWordGameFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/letsPlay"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ballsInBuildWordGame"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/enterTheForm" />

        <EditText
            android:id="@+id/answerInBuildWordGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/questionInBuildWordGame"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/questionInBuildWordGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView12"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:text="" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView10"
            android:layout_alignBottom="@+id/textView10"
            android:layout_toLeftOf="@+id/ballsInBuildWordGame"
            android:layout_toStartOf="@+id/ballsInBuildWordGame"
            android:text="@string/balls"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/ballsInBuildWordGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView10"
            android:layout_alignBottom="@+id/textView10"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            android:text="0" />

        <Button
            android:id="@+id/enterAnswerInBuildWordGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/answerInBuildWordGame"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/enter_btn" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingRight="5dp"
            android:text="@string/versionAndAuthor"
            android:textAlignment="textEnd"
            android:textStyle="normal|bold|italic"
            tools:ignore="HardcodedText"
            android:gravity="end" />

    </RelativeLayout>
</FrameLayout>