<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="by.akatsnelson.teachlang.fragment.MainFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/for_what"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingRight="5dp"
        android:text="@string/versionAndAuthor"
        android:textAlignment="textEnd"
        android:textStyle="normal|bold|italic"
        tools:ignore="HardcodedText"
        android:gravity="end" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView14"
            android:layout_marginRight="18dp"
            android:layout_marginTop="33dp"
            android:gravity="end"
            android:text="@string/primerTwo"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView9"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="29dp"
            android:text="@string/primerOne" />
    </RelativeLayout>

</FrameLayout>
